--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <div class="collapsible-content">
         <ul>
             <li>
-                <b>SHIFT-DT:</b> Sustainable, Holistic, Integrated Framework for Ship Design and Production Transformation through Digital Twins
+                <b>SHIFT-DT:</b> Sustainable, Holistic, Integrated Framework for Ship Design and Production Transformation through Digital Twins <a href="https://www.digitalfutures.kth.se/research/research-pairs/ongoing-research-pairs-projects/shift-dt-sustainable-holistic-integrated-framework-for-ship-design-and-production-transformation-through-digital-twins/">[LINK]</a>
                 <ul>
                     <li>Funded by Digital Futures (Swedish Funding Agency)</li>
                     <li>Leading the project as a Principal Investigator (PI) to establish a framework that can marry holistic ship design with digitalized ship production and logistics through digital twins</li>
@@ -191,7 +191,7 @@
                 </ul>
             </li>
             <li>
-                <b>Dynamic SALSA:</b> Dynamic scheduling of assembly and logistics system using AI
+                <b>Dynamic SALSA:</b> Dynamic scheduling of assembly and logistics system using AI <a href="https://www.vinnova.se/p/eureka-smart-dynamic-salsa/">[LINK]</a>
                 <ul>
                     <li>Funded by Eureka SMART and Vinnova (Swedish Innovation Agency)</li>
                     <li>Building a computer vision-based platform for analyzing human operators and objects in a production logistics environment</li>
@@ -199,7 +199,7 @@
                 </ul>
             </li>
             <li>
-                <b>TIMEBLY:</b> Time data management automation for manual assembly
+                <b>TIMEBLY:</b> Time data management automation for manual assembly <a href="https://www.vinnova.se/en/p/time-data-management-automation-for-manual-assembly---timebly/">[LINK]</a>
                 <ul>
                     <li>Funded by Vinnova</li>
                     <li>Leading the human pose estimation and time series prediction analysis for manual assembly tasks using open-source libraries</li>
@@ -207,7 +207,7 @@
                 </ul>
             </li>
             <li>
-                <b>DYNASTEEL:</b> Dynamic scheduling and transport visibility in steel production
+                <b>DYNASTEEL:</b> Dynamic scheduling and transport visibility in steel production <a href="https://www.vinnova.se/p/dynasteel/">[LINK]</a>
                 <ul>
                     <li>Funded by Vinnova</li>
                     <li>Involved in human-centered system design process for autonomous transportation system including requirements analysis and prototyping</li>
@@ -215,7 +215,7 @@
                 </ul>
             </li>
             <li>
-                <b>C-PALS:</b> Cyber-physical assembly and logistics system
+                <b>C-PALS:</b> Cyber-physical assembly and logistics system <a href="https://www.vinnova.se/p/e-smart-c-pals/">[LINK]</a>
                 <ul>
                     <li>Funded by Eureka SMART and Vinnova</li>
                     <li>Built a digital twin and real-time production logistics data visualization platform using open-source libraries</li>
@@ -223,7 +223,7 @@
                 </ul>
             </li>
             <li>
-                <b>HUPMOBILE:</b> Holistic urban and per-urban mobility
+                <b>HUPMOBILE:</b> Holistic urban and per-urban mobility <a href="https://www.hupmobile-project.eu/">[LINK]</a>
                 <ul>
                     <li>Funded by Interreg Baltic Sea Region (EU)</li>
                     <li>Involved in participatory modelling and simulation process for urban mobility simulation with multiple stakeholders</li>
@@ -360,8 +360,7 @@
 </section>
     <!-- Chart Section -->
     <section class="chart-container">
-        <h2>Insights</h2>
-        <h3>Publications and Conferences Per Year</h3>
+    
         <canvas id="publicationsAndConferencesChart"></canvas>
     </section>
 
