--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
          <a href="#education-anchor">Education</a>
          <a href="#research-interests-anchor">Research Interests</a>
          <a href="#awards-and-honors-anchor">Awards and Honors</a>
+         <a href="#word-cloud-anchor">Word Cloud</a>
          <a href="#profile-anchor">Links</a>
       </div>
       <section class="page-header">
@@ -144,7 +145,7 @@
       <section class="main-content">
          <!-- Employment -->
          <div class="anchor" id="employment-anchor"></div>
-         <h3><a id="employment" class="anchor" href="#career" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Employment</h3>
+         <h3>Employment</h3>
          <ul>
             <li>Assistant Professor, Department of Production Engineering, KTH Royal Institute of Technology, Sweden, 2021-now</li>
             <li>Postdoc, Department of Sustainable Production Development, KTH Royal Institute of Technology, Sweden, 2019-2021</li>
@@ -152,14 +153,14 @@
          </ul>
          <!-- Education -->
          <div class="anchor" id="education-anchor"></div>
-         <h3><a id="education" class="anchor" href="#education" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Education</h3>
+         <h3>Education</h3>
          <ul>
             <li>Ph.D., Department of Naval Architecture and Ocean Engineering, Seoul National University, South Korea, 2018</li>
             <li>B.Sc., Department of Naval Architecture and Ocean Engineering, Seoul National University, South Korea, 2011</li>
          </ul>
          <!-- Research Interests -->
          <div class="anchor" id="research-interests-anchor"></div>
-         <h3><a id="research-interests" class="anchor" href="#research-interests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests</h3>
+         <h3>Research Interests</h3>
          <ul>
             <li>Digitalization in production logistics</li>
             <li>Manufacturing simulation</li>
@@ -167,7 +168,7 @@
          </ul>
          <!-- Awards and Honors -->
          <div class="anchor" id="awards-and-honors-anchor"></div>
-         <h3><a id="awards-and-honors" class="anchor" href="#awards-and-honors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Awards and Honors</h3>
+         <h3>Awards and Honors</h3>
          <ul>
             <li>Oct 2019, The Elmer L. Hann Award, Best Paper on Ship Production Delivered at the Ship Production Symposium, SNAME <a href="https://www.sname.org/elmer-l-hann-award">[LINK]</a></li>
             <li>Mar 2012 - Aug 2013, STX Foundation</li>
@@ -358,6 +359,7 @@
       </section>
       <section class="main-content">
          <div class="anchor" id="word-cloud-anchor"></div>
+         <h3>Word Cloud</h3>
          <div id="word-cloud"></div>
          <p style="font-size: 0.8em; text-align: center; margin-top: 10px;">
             Word cloud created with <a href="https://www.jasondavies.com/wordcloud/">Jason Davies' Word Cloud Generator</a>, based on titles from my recent projects and publications
@@ -366,7 +368,7 @@
       <section class="main-content">
          <!-- Profile -->
          <div class="anchor" id="profile-anchor"></div>
-         <h3><a id="profile" class="anchor" href="#profile" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Links</h3>
+         <h3>Links</h3>
          <ul>
             <li>KTH Profile <a href="https://www.kth.se/profile/yongkuk">[LINK]</a></li>
             <li>Google Scholar <a href="https://scholar.google.co.kr/citations?user=y59QYYIAAAAJ&hl=ko">[LINK]</a></li>
@@ -375,6 +377,9 @@
             <li>CV <a href="docs/Public_CV_Yongkuk Jeong_Simple.pdf">[LINK]</a></li>
          </ul>
       </section>
+      <footer style="text-align:center; padding:20px; background-color:#f5f5f5; color:black; font-size:0.8em;">
+         © 2021-2024 Yongkuk Jeong, All rights reserved.
+     </footer>
       <script>
          document.addEventListener('DOMContentLoaded', function() {
              // Manually entered data for publications and conferences count
