--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
             <ul>
                <li>2024</li>
                <ul>
-                  <li>Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2024), <span style="color:#1d6ab8">From novice to expert: advancing step-by-step simulation guideline for urban logistics with an open-source simulation tool</span>, The International Journal of Logistics Management, <a href="https://doi.org/10.1108/IJLM-02-2023-0056">[Link: Paper]</a></li>
+                    <li>Erik Flores-García, Dong Hoon Kwak, <b>Yongkuk Jeong</b>, and Magnus Wiktorsson (2024), <span style="color:#1d6ab8">Machine learning in smart production logistics: a review of technological capabilities</span>, International Journal of Production Research, <a href="https://doi.org/10.1080/00207543.2024.2381145">[Link: Paper]</a></li>
+                    <li>Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2024), <span style="color:#1d6ab8">From novice to expert: advancing step-by-step simulation guideline for urban logistics with an open-source simulation tool</span>, The International Journal of Logistics Management, <a href="https://doi.org/10.1108/IJLM-02-2023-0056">[Link: Paper]</a></li>
                </ul>
                <li>2023</li>
                <ul>
@@ -302,6 +303,14 @@
          <button class="collapsible" href="#conference">Conference</button>
          <div class="collapsible-content">
             <ul>
+                <li>2024</li>
+                <ul>
+                    <li><b>Yongkuk Jeong</b>, Donggyun Park, Jesper Gans, and Magnus Wiktorsson (2024), <span style="color:#1d6ab8">Advanced Time Block Analysis for Manual Assembly Tasks in Manufacturing Through Machine Learning Approaches</span>, APMS 2024, Chemnitz/Zwickau, Germany, 8-12 September, 2024</li>
+                    <li>Erik Flores-García, <b>Yongkuk Jeong</b>, Enrique Ruiz Zuniga, and Magnus Wiktorsson (2024), <span style="color:#1d6ab8">Centering on Humans-Intersectionality in Vision Systems for Human Order Picking</span>, APMS 2024, Chemnitz/Zwickau, Germany, 8-12 September, 2024</li>
+                    <li><b>Yongkuk Jeong</b> and Jannicke Baalsrud Hauge (2024), <span style="color:#1d6ab8">Integrating the CoI Framework with Industry Insights for Enhanced Engineering Education in Sustainable Production Development</span>, International Symposium on Logistics (ISL 2024), Bangkok, Thailand, 7-10 July, 2024</li>
+                    <li>Jannicke Baalsrud Hauge and <b>Yongkuk Jeong</b> (2024), <span style="color:#1d6ab8">Does the Improvement in AI Tools Necessitate a Different Approach to Engineering Education?</span>, Swedish Production Symposium 2024, Trollhättan, Sweden, 23-26 April, 2024</li>
+                    <li><b>Yongkuk Jeong</b>, Erik Flores-García, and Magnus Wiktorsson (2024), <span style="color:#1d6ab8">Integrating Smart Production Logisticswith Network Diagrams: A Frameworkfor Data Visualization</span>, Swedish Production Symposium 2024, Trollhättan, Sweden, 23-26 April, 2024</li>
+                </ul>
                <li>2023</li>
                <ul>
                   <li><b>Yongkuk Jeong</b>, Erik Flores-García, Simon Piontek, and Magnus Wiktorsson (2023), <span style="color:#1d6ab8">Implementing transmission of data for digital twins in human-centered cyber-physical systems</span>, CIRP CMS 2023, Cape Town, South Africa, 24-26 October, 2023</li>
@@ -404,8 +413,8 @@
          document.addEventListener('DOMContentLoaded', function() {
              // Manually entered data for publications and conferences count
              const labels = ['2018', '2019', '2020', '2021', '2022', '2023', '2024'];
-             const pubData = [4, 2, 3, 4, 0, 2, 1]; // Example counts for publications per year
-             const confData = [5, 3, 10, 5, 7, 6, 0]; // Example counts for conferences per year
+             const pubData = [4, 2, 3, 4, 0, 2, 2]; // Example counts for publications per year
+             const confData = [5, 3, 10, 5, 7, 6, 5]; // Example counts for conferences per year
          
              const ctx = document.getElementById('publicationsAndConferencesChart').getContext('2d');
              new Chart(ctx, {
