--- a/index.html
+++ b/index.html
@@ -204,6 +204,12 @@
             <ul>
                 <li>2025</li>
 <ul>
+    <li>
+    E Flores-García, E Ruiz Zúñiga <b>Y Jeong</b>, M Wiktorsson (2025), 
+    <span style="color:#1d6ab8">AI-enabled vision systems for human-centered order picking - A design science research approach</span>, 
+    International Journal of Production Research, <a href="https://doi.org/10.1080/00207543.2025.2535515">[Link: Paper]</a>
+    
+  </li>
   <li>
     M Zafarzadeh, E Flores-García, <b>Y Jeong</b>, M Wiktorsson (2025), 
     <span style="color:#1d6ab8">A framework and system architecture for value-oriented digital services in data-driven production logistics</span>, 
