--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
                 <li>2025</li>
 <ul>
     <li>
+        C Boonmee, J Mangkalakeeree, <b>Y Jeong</b> (2025),
+        <span style="color:#1d6ab8">Towards sustainable digital transformation: AI adoption barriers and enablers among SMEs in Northern Thailand</span>,
+        Sustainable Futures 10:101169,
+        <a href="https://doi.org/10.1016/j.sftr.2025.101169">[Link: Paper]</a>
+      </li>
+    <li>
     E Flores-García, E Ruiz Zúñiga <b>Y Jeong</b>, M Wiktorsson (2025), 
     <span style="color:#1d6ab8">AI-enabled vision systems for human-centered order picking - A design science research approach</span>, 
     International Journal of Production Research, <a href="https://doi.org/10.1080/00207543.2025.2535515">[Link: Paper]</a>
@@ -277,6 +283,11 @@
          <button class="collapsible" href="#conference">Conferences</button>
          <div class="collapsible-content">
             <ul>
+                <li>2025</li>
+                <ul>
+                    <li><b>Yongkuk Jeong</b>, Christian Kober, and Marc Fette (2025), <span style="color:#1d6ab8">Integrating Large Language Models and Digital Twins in Manufacturing: Opportunities and Challenges for Production Logistics and Assembly Environments</span>, APMS 2025, Kamakura, Japan, 31 Aug–4 Sep 2025</li>
+                    <li>Seoyoung Jo, Erik Flores-García, <b>Yongkuk Jeong</b>, Magnus Wiktorsson, and Sang Do Noh (2025), <span style="color:#1d6ab8">Extending ISO 23247: A Production Logistics Information Model for Integrated Digital Twins</span>, APMS 2025, Kamakura, Japan, 31 Aug–4 Sep 2025</li>
+                </ul>
                 <li>2024</li>
                 <ul>
                     <li><b>Yongkuk Jeong</b>, Donggyun Park, Jesper Gans, and Magnus Wiktorsson (2024), <span style="color:#1d6ab8">Advanced Time Block Analysis for Manual Assembly Tasks in Manufacturing Through Machine Learning Approaches</span>, APMS 2024, Chemnitz/Zwickau, Germany, 8-12 September, 2024</li>
