--- a/playground/AUGMENT-gantt.html
+++ b/playground/AUGMENT-gantt.html
@@ -143,7 +143,7 @@
       MS('WP4','M4.2',30,'KTH','Methodology demonstrated in ≥2 demos.');
 
       // WP5
-      T('WP5','5.1 Joint co-design workshop & protocol rollout',1,6,'UoP','Cross-case workshops; common templates & protocol.');
+      T('WP5','5.1 Co-design industrial demonstrators',1,6,'KTH','Cross-case workshops; common templates & protocol.');
       T('WP5','5.2 Shipbuilding use cases & baselines',2,10,'HDKSOE','Personas, work chronicles, KPIs.');
       T('WP5','5.3 Mining use cases & baselines',2,10,'NMT','Operator support, predictive maintenance, training.');
       T('WP5','5.4 Food & beverage use cases & baselines',2,10,'IDL','Decision support; inclusiveness indicators.');
