--- a/playground/whoisworkingwhat.html
+++ b/playground/whoisworkingwhat.html
@@ -233,7 +233,7 @@
   $('#exportBtn').addEventListener('click', () => {
     const data = JSON.stringify(rows, null, 2);
     const blob = new Blob([data], {type:'application/json'});
-    const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = 'pulse-network.json'; a.click();
+    const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = `pulse-network-${new Date().toISOString().replace(/[:.]/g,'-')}.json`; a.click();
   });
   $('#importFile').addEventListener('change', (e) => {
     const f=e.target.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ try{ const data=JSON.parse(r.result); if(Array.isArray(data)){ rows=data.map(d=>({id:d.id||crypto.randomUUID(), member:d.member||'', company:d.company||'', project:d.project||'', status:d.status||'active', last_contact:d.last_contact||''})); saveData(rows); renderList(); renderGraph(); } else alert('Invalid JSON'); }catch{ alert('Failed to import'); } }; r.readAsText(f);
@@ -244,7 +244,7 @@
     const header = ['member','project','company','status','last_contact'];
     const lines = [header.join(',')].concat(rows.map(r=> header.map(k=> csvEscape(r[k]||'')).join(',')));
     const blob = new Blob([lines.join('\n')],{type:'text/csv'});
-    const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download='pulse-network.csv'; a.click();
+    const a=document.createElement('a'); a.href=URL.createObjectURL(blob); a.download = `pulse-network-${new Date().toISOString().replace(/[:.]/g,'-')}.csv`; a.click();
   });
   $('#importCsv').addEventListener('change', (e)=>{
     const f=e.target.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{
