--- a/playground/whoisworkingwhat.html
+++ b/playground/whoisworkingwhat.html
@@ -125,7 +125,7 @@
     <section class="card viz">
       <div class="panel" style="padding-bottom:0">
         <h2>Network</h2>
-        <div class="footer">Layout: <b>Person → Project → Company</b>. Nodes colored by type (blue/紫/teal as before). The <b>project→company</b> link is colored by most‑recent status; a tiny chip set shows all statuses on that link. Drag to tidy.</div>
+        <div class="footer">Layout: <b>Person → Project → Company</b>. Nodes colored by type. The <b>project→company</b> link is colored by most‑recent status; a tiny chip set shows all statuses on that link. Drag to tidy.</div>
       </div>
       <svg id="graph" width="100%" height="660"></svg>
       <div class="legend">
